fixed opening questions not showing

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,26 @@
   margin-top: 100px;
 }
 
+
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #40616e; 
+  border-radius: 10px;
+  background-color: rgba(210, 217, 220, 1);
+  /* color: #40616e; */
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba( 0, 0, 0, .6); 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #40616e; 
+}
 @media screen and (min-width: 481px) {
 
   .introImg {
@@ -27,6 +47,9 @@
   }
   .jInputBox {
     width: 80% !important;
+  }
+  ::-webkit-scrollbar {
+    width: 20px;
   }
 }
 @media screen and (min-width: 769) {
