--- a/src/Components/EventsFeed/EventsMenu.css
+++ b/src/Components/EventsFeed/EventsMenu.css
@@ -71,7 +71,7 @@
 .jFeedCon {
   margin-top: 20px;
   overflow: auto;
-  height: 67vh;
+  height: 70vh;
 }
 .jFeedUl {
   /* margin-top: 20px; */
@@ -80,7 +80,7 @@
   flex-wrap: wrap;
   margin-right: 0px;
   padding: 0px;
-  overflow: scroll;
+  /* overflow: scroll; */
   
 }
 .jFeedLi {
@@ -181,7 +181,7 @@
   padding-left: 0px;
   margin-left: auto;
   margin-right: auto;
-  width: 300px;
+  /* width: 300px; */
   height: 74vh;
   overflow: auto;
 }
@@ -258,7 +258,7 @@
 }
 .videosUl {
   padding-left: 0px;
-  width: 90%;
+  /* width: 90%; */
   margin-left: auto;
   margin-right: auto;
   overflow: auto;
